<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalPacienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="#61E167"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenidoPrincipalPaciente"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>


                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progresoDatosPaciente"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/nombresPrincipalPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/nombresPrincipalPaciente"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/correosPrincipalPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/correoPrincipalPaciente"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:src="@drawable/sano"
            />

        <ListView
            android:id="@+id/ListaReceta"
            android:layout_marginTop="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:backgroundTint="#18529D"
            android:text="@string/btnCerrarSesion"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="0sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>